# const-combinations

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: combinations.rs  lib.rs  permutations.rs  slice_combinations.rs  slice_permutations.rs
