[package]
name = "const-combinations"
version = "2.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/const-combinations"
documentation = "https://docs.rs/const-combinations"
description = "const fn combinations iter adapter"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]

[dev-dependencies]
